Use Integer.valueOf over new Integer.
Integers in .valueOf are cached and will likely provide enhanced performance.